# Ndless

./: .gitignore  .gitmodules  CNAME  Makefile  Makefile.config.tpl  Makefile.include  Mozilla-Public-License-v1.1.html  README.md  TODO  index.html
.github/workflows/: main.yml
Ndless-SDK/: .dockerignore  Docker.md  Dockerfile  Makefile  SciTEGlobal.properties
Ndless-SDK/_samples/: LICENSE.txt  Makefile
Ndless-SDK/_samples/freetype/: Makefile  freetype_demo.c
Ndless-SDK/_samples/helloworld/: Makefile  hello.c
Ndless-SDK/_samples/helloworld-cpp/: hello.cpp
Ndless-SDK/_samples/helloworld-sdl/: Makefile
Ndless-SDK/_samples/link-sdl/: Makefile  link.c
Ndless-SDK/_samples/luaext/: Makefile  runluaextdemo.lua
Ndless-SDK/_samples/newlib/: Makefile
Ndless-SDK/_samples/ngc/: Makefile  ngc_demo.c
Ndless-SDK/_samples/particles/: Makefile  gravity_particles.h  main.c  utils.h  (+4 more)
Ndless-SDK/autoit/: ReadMe.txt
Ndless-SDK/cmd_tools/: new_ndless_project.lua  run_emu.lua  run_prgm_in_emu.lua  startup.lua
Ndless-SDK/elf2flt/: Ndless-20130602.patch  ReadMe.txt
Ndless-SDK/emu_resources/: _ReadMe.txt
Ndless-SDK/luna/: Makefile  ReadMe.txt
Ndless-SDK/ndless_pc/: ReadMe.txt
Ndless-SDK/nspire_emu/: Makefile  armsnippets.S  casplus.c  cpu.c  debug.c  des.c  disasm.c  emu.h  gui.c  id.h  misc.c  mmu.c  ne_send_file.sh  os-win32.c  os-win32.h  resource.rc  sha256.c  usb.c  wrapper_nspire_emu.sh
Ndless-SDK/scite-debug/: SciTE.lib  documentation.html  extman.lua  unix-spawner-ex.c
Ndless-SDK/toolchain/: Dockerfile  build_toolchain.sh
Ndless-SDK/toolchain/elf2flt/: .gitignore  Makefile.in  README  README.ndless  compress.c  compress.h  configure.in  elf2flt.c  flthdr.c  ld-elf2flt.c  ld-elf2flt.in  stubs.c  stubs.h
Ndless-SDK/toolchain/elf2flt/CVS/: Entries
arm/: Makefile  bflt.c  bflt.h  bflt_config.h  emu.c  flat.h  hrpatches-os-cas-3.6.0.h  hrpatches-os-cascx-3.6.0.h  install.c  luaext.c  ndless.h  ndless_installer.lua.tpl  ndless_version.h  ndless_version.lua  ploaderhook.c  syscalls-light_cas-3.6.0.c  syscalls-light_cascx-3.6.0.c  syscalls-light_ncas-3.6.0.c  syscalls-light_ncascx-3.6.0.c  syscalls.c  syscalls_cascx-3.6.0.c  syscalls_ncas-3.6.0.c  syscalls_ncascx-3.6.0.c
arm/tests/: Makefile  ReadMe.txt  assert.c  ndless.cfg.tns  ndless_cpp_tests.cpp  ndless_ngc_tests.c  ndless_popup_tests.c  ndless_tests.h  ndless_tests.luax.c
css/: bootstrap-responsive.css  bootstrap.css  custom-responsive.css  normalize.css  styles.css
doc/: ReadMe-MSYS-YAGARTO.txt  ReadMe.txt
fonts/ecoicons/: ecoicon.eot
fonts/opensans-light/: opensans-light-demo.html
js/: cbpscroller.js  jquery.cbpqtrotator.min.js  jquery.js
libndls/: Makefile  _is_touchpad.c  _show_msgbox.c  any_key_pressed.c  assert_ndless_rev.c  config.c  feof.c  file_each.c  hwtype.c  idle.c  lcd_incolor.c  locate.c  nprintf.c  refresh_osscr.c  set_cpu_speed.c  show_1numeric_input.c  show_2numeric_input.c  sleep.c  strcspn.c  touchpad.c
ndless/: Makefile  Ndless-Development.txt  ReadMe.txt
ndless-sdk/: .dockerignore  Dockerfile.arm-gcc  Dockerfile.ndless  Dockerfile.ndless-sdk  Makefile  README-Docker.md
ndless-sdk/bin-docker/: nspire-as  nspire-docker
ndless-sdk/include/: .gitignore  LICENSE.txt  bsdcompat.h  dirent.h  fdlibm.h  hook.h  keys.h  lauxlib.h  libndls.h  lua.h  luaconf.h  lualib.h  ngc.h  nucleus.h  os.h  syscall-addrs.h  syscall-decls.h  syscall-list.h  syscall.h  syscalls.h  usb.h  usbdi.h  zehn.h
ndless-sdk/lib/: .gitignore  README_nSDL
ndless-sdk/libndless/: Makefile  stdlib.cpp  syscall.h
ndless-sdk/libndls/: Makefile  _scrsize.c  _show_msgbox.c  about.txt  any_key_pressed.c  clear_cache.c  clrscr.c  config.c  enable_relative_paths.c  fgets.c  file_each.c  fputs.c  isKeyPressed.c  isalnum.c  iscntrl.c  keys.c  lcd_blit.cpp  lcd_ingray.c  lcd_isincolor.c  locate.c  ngc.c  nputs.c  on_key_pressed.c  rewind.c  set_cpu_speed.c  show_msg_user_input.c  sleep.c  strspn.c  touchpad.c  truncate.c  usbd_set_idle.c  wait_key_pressed.c  wait_no_key_pressed.c
ndless-sdk/libsyscalls/: .gitignore  Makefile  about.txt  mkStubs.php  osvar.cpp  realpath.c  stdlib.cpp  stubs.cpp
ndless-sdk/samples/: .gitignore  Makefile  ReadMe.txt
ndless-sdk/system/: Makefile  about.txt  crt0.S  crti.S  crtn.S  ldscript
ndless-sdk/tests/: ReadMe.txt  ndless_docbrowser_tests.c  ndless_keys.c  ndless_luatests.lua  ndless_tests.c  ndless_tpad.c
ndless-sdk/toolchain/: .dockerignore  .gitignore  build_toolchain.sh  gcc_6.1.patch
ndless-sdk/toolchain/genzehn/elfio-2.2/: AUTHORS  INSTALL  Makefile.am  Makefile.in  configure.ac
ndless-sdk/toolchain/genzehn/elfio-2.2/elfio/: elf_types.hpp  elfio.hpp  elfio_dump.hpp  elfio_header.hpp  elfio_segment.hpp  elfio_strings.hpp  elfio_utils.hpp
ndless-sdk/toolchain/genzehn/elfio-2.2/examples/: Makefile.in
ndless-sdk/toolchain/genzehn/elfio-2.2/examples/elfdump/: ELFDump.vcxproj  Makefile.in
ndless-sdk/toolchain/genzehn/elfio-2.2/examples/tutorial/: Makefile.in  tutorial.cpp
ndless-sdk/toolchain/genzehn/elfio-2.2/examples/writer/: Makefile.am  Makefile.in
ndless-sdk/tools/: Makefile  Setup NdlessEditor.txt
ndless-sdk/tools/genzehn/elfio-3.2/: Makefile.in  README  aclocal.m4  configure  configure.ac
ndless-sdk/tools/genzehn/elfio-3.2/elfio/: elfio.hpp  elfio_dump.hpp
ndless-sdk/tools/genzehn/elfio-3.2/examples/: Makefile.am  Makefile.in
ndless-sdk/tools/genzehn/elfio-3.2/examples/elfdump/: ELFDump.vcxproj  Makefile.in  elfdump.cpp
ndless-sdk/tools/genzehn/elfio-3.2/examples/tutorial/: Makefile.am  Makefile.in
ndless-sdk/tools/genzehn/elfio-3.2/examples/write_obj/: Makefile.in
ndless-sdk/tools/genzehn/elfio-3.2/examples/writer/: Makefile.in  writer.cpp
ndless/calcbin/: .gitignore  ndless.cfg.tns  ndless_resources_3.6.tns
ndless/src/: Makefile  bflt.c  bflt.h  emu.c  ints.c  ndless_version.lua  stage0.S  stage1.c  syscalls_cas-3.6.0.c  utils.c
tools/: Makefile
tools/EscapeInstaller/: EscapeInstaller.c  Makefile
tools/MakeHotRebootPatches/: Makefile  ReadMe.txt
tools/MakeLuaInst/: Makefile
tools/MakeSyscalls/: Makefile  mksyscalls.sh
(+525 files in other folders)
