AC_INIT([ELFIO], [3.2])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_FILES([
           Makefile
           examples/Makefile
           examples/elfdump/Makefile
           examples/tutorial/Makefile
           examples/writer/Makefile
           examples/write_obj/Makefile
])
AC_OUTPUT
